deploy/k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omega
spec:
  selector:
    app.kubernetes.io/name: omega
  ports:
    - name: http
      port: 80
      targetPort: http
